--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,80 @@
+@font-face {
+  font-family: "SourceSerif";
+  src: url("../../fonts/SourceSerif4_36pt-ExtraBold.ttf") format("woff");
+}
+
 .app {
-    background-color: #603B28;
-    height: 100%;
-    max-width: 90%;
-    margin:0 auto;
+  background-color: #603b28;
+  height: 100%;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.modal__content {
+  position: relative;
+  background-color: white;
+  max-width: 498px;
+  width: 100%;
+  border-radius: 16px;
+}
+
+.policy__modal-close-button {
+  height: 22px;
+  width: 22px;
+  background-image: url("../../images/closebutton.svg");
+  background-size: cover;
+  position: absolute;
+  top: 28px;
+  right: 28px;
+}
+
+.policy__modal-header {
+  font-family: "SourceSerif";
+  font-size: 38px;
+  line-height: 1.2;
+  text-align: center;
+  margin-top: 26px;
+  margin-bottom: 16px;
+}
+
+.policy__modal-info {
+  font-family: "SourceSewrif";
+  font-size: 28px;
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  border: 2px solid black;
+  background-color: rgb(240, 233, 233);
+  padding: 20px 70px;
+}
+
+.policy__modal-submit-button {
+  width: auto;
+  height: auto;
+  display: inline-block;
+  border-radius: 8px;
+  background-color: #a89e24;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: "SourceSerif";
+  font-size: 20px;
+  outline: 0;
+  padding: 10px 25px;
+  text-align: center;
+  transform: translateY(0);
+  transition: transform 150ms, box-shadow 150ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.policy__modal-submit-button:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
+  transform: translateY(-2px);
 }
