--- a/src/components/SignatureCanvas/SignatureCanvas.css
+++ b/src/components/SignatureCanvas/SignatureCanvas.css
@@ -12,7 +12,7 @@
 
 .signature__clear-button {
   margin-top: 15px;
-  width: auto;
+  width: 220px;
   height: auto;
   border-radius: 8px;
   background-color: #a89e24;
@@ -33,7 +33,8 @@
   touch-action: manipulation;
 }
 
-.signature__clear-button:hover{
+/* .signature__clear-button:hover{
   box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
   transform: translateY(-2px);
-}
+} */
+
