--- a/src/components/PolicyModal/PolicyModal.css
+++ b/src/components/PolicyModal/PolicyModal.css
@@ -80,10 +80,10 @@
   padding-left: 5px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 560px) {
   .policy__modal-info {
-    font-size: 14px;
-    padding: 10px 30px;
+    font-size: 16px;
+    padding: 16px 30px;
   }
 
   .policy__modal-header {
@@ -111,5 +111,16 @@
   .policy__modal-check-button {
     width: 14px;
     height: 14px;
+  }
+}
+
+@media screen and (min-width: 561px) and (max-width:690px){
+  .policy__modal-header {
+    margin-top: 0;
+    font-size: 30px;
+  }
+
+  .policy__modal-info {
+    font-size: 20px;
   }
 }
