--- a/src/components/SignatureCanvas/SignatureCanvas.css
+++ b/src/components/SignatureCanvas/SignatureCanvas.css
@@ -3,13 +3,6 @@
     src: url("../../fonts/SourceSerif4_36pt-ExtraBold.ttf") format("woff");
   }
 
-.modal__input-title {
- font-family: "SourceSerif";
- font-size: 24px;
- line-height: 1.2;
-
-}
-
 .signature__clear-button {
   margin-top: 15px;
   width: 220px;
@@ -33,8 +26,20 @@
   touch-action: manipulation;
 }
 
-/* .signature__clear-button:hover{
+.signature__clear-button:hover{
   box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
   transform: translateY(-2px);
-} */
+}
+
+@media screen and (max-width: 480px){
+  .signature__clear-button {
+    width: 160px;
+    font-size: 16px;
+    padding: 10px 16px;
+  }
+
+  .signature-canvas {
+     height: 160px;
+  }
+}
 
