--- a/src/components/SignatureCanvas/SignatureCanvas.css
+++ b/src/components/SignatureCanvas/SignatureCanvas.css
@@ -26,6 +26,11 @@
   touch-action: manipulation;
 }
 
+.signature-canvas {
+  width: 100%;
+  height: 100%;
+}
+
 .signature__clear-button:hover{
   box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
   transform: translateY(-2px);
