--- a/src/components/AddNameModal/AddNameModal.css
+++ b/src/components/AddNameModal/AddNameModal.css
@@ -28,8 +28,46 @@
   border-bottom: 1px solid #FF0000;
 }
 
+.signature__clear-button {
+  margin-top: 15px;
+  width: 220px;
+  height: auto;
+  border-radius: 8px;
+  background-color: #a89e24;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: "SourceSerif";
+  font-size: 20px;
+  outline: none;
+  outline: 0;
+  padding: 10px 25px;
+  text-align: center;
+  transform: translateY(0);
+  transition: transform 150ms, box-shadow 150ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.signature-canvas {
+  width: 100%;
+  height: 100%;
+}
+
+.signature__clear-button:hover{
+  box-shadow: rgba(0, 0, 0, 0.15) 0 3px 9px 0;
+  transform: translateY(-2px);
+}
+
 @media screen and (max-width: 560px) {
   p {
     font-size: 1.4rem;
+  }
+  .signature__clear-button {
+    width: 160px;
+    font-size: 16px;
+    padding: 10px 16px;
   }
 }
